--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@
 	width: 400px;
 	height: 400px;
 }
+.table{
+	border: 2px solid #000000;
+}
+table td{
+	border: 2px solid #000000;
+	padding: 5px 7px;
+}
